# taskill

./: .env.example  .gitignore  CHANGELOG.md  PKG-INFO  README.md  ROADMAP.md  SUMD.md  SUMR.md  TODO.md  app.doql.less  daily_update.sh  goal.yaml  planfile.yaml  project.sh  pyproject.toml  taskill.yaml  tree.txt
.windsurf/workflows/: daily-docs-update.md
examples/: ansible-playbook.yml  github-action.yml  gitlab-ci.yml
examples/systemd-timer/: taskill.service  taskill.timer
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  map.toon.yaml  mermaid.export  project.toon.yaml  prompt.txt
src/taskill/: __init__.py  bulk.py  cli.py  config.py  core.py  filters.py  git_state.py  state.py  triggers.py
src/taskill/providers/: __init__.py  algorithmic.py  base.py  openrouter.py  windsurf_mcp.py
src/taskill/updaters/: __init__.py  base.py  changelog.py  readme.py  todo.py
testql-scenarios/: generated-cli-tests.testql.toon.yaml
tests/: test_algorithmic.py  test_bulk.py  test_config.py  test_providers.py  test_triggers.py  test_updaters.py
