[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taskill"
version = "0.1.3"
description = "Daily project hygiene: keep README / CHANGELOG / TODO in sync with reality. LLM-first, algorithmic fallback."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Tom Sapletta" },
    {name = "Tom Sapletta", email = "tom@sapletta.com"},
]
keywords = ["changelog", "readme", "todo", "llm", "openrouter", "mcp", "ci-cd", "automation"]

dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "click>=8.1",
    "rich>=13.7",
    "goal>=2.1.0",
    "costs>=0.1.20",
    "pfix>=0.1.60",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
schedule = ["apscheduler>=3.10"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.5",
    "goal>=2.1.0",
    "costs>=0.1.20",
    "pfix>=0.1.60",
]

[project.scripts]
taskill = "taskill.cli:main"

[project.entry-points."taskill.providers"]
windsurf_mcp = "taskill.providers.windsurf_mcp:WindsurfMcpProvider"
openrouter = "taskill.providers.openrouter:OpenRouterProvider"
algorithmic = "taskill.providers.algorithmic:AlgorithmicProvider"

[project.entry-points."taskill.updaters"]
changelog = "taskill.updaters.changelog:ChangelogUpdater"
todo = "taskill.updaters.todo:TodoUpdater"
readme = "taskill.updaters.readme:ReadmeUpdater"

[project.urls]
Homepage = "https://github.com/oqlos/taskill"
Issues = "https://github.com/oqlos/taskill/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/taskill"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
